--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,21 +10,21 @@ $white: #FEFBEB;
 // FONTES
 
 @font-face {
-    font-family: 'Inter', sans-serif ;
+    font-family: 'Inter';
     src: url(../fonts/inter/Inter-Regular.ttf) format("woff2");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
-    font-family: 'Inter', sans-serif ;
+    font-family: 'Inter';
     src: url(../fonts/inter/Inter-Medium.ttf) format("woff2");
     font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
-    font-family: 'Lexend Deca', sans-serif ;
+    font-family: 'Lexend Deca' ;
     src: url(../fonts/lexend-deca/LexendDeca-Regular.ttf) format("woff2");
     font-weight: 400;
     font-style: normal;
