--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,9 @@
 @import 'reset';
 @import 'variables';
 @import 'mixins';
+
+
+#logo {
+    font: 400 2.4rem 'Lexend Deca';
+    color: $color-primary;
+} 
