--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -29,7 +29,17 @@ $white: #FEFBEB;
     font-weight: 400;
     font-style: normal;
     font-display: swap;
+  
 }
 
 // HOVER 
 
+@mixin background($name) {
+    background: {
+        size: cover;
+        position: center;
+        repeat: no-repeat;
+    }
+    $url: "../img/#{$name}.svg";
+    background-image: linear-gradient(360deg, #13131F 0%, rgba(19, 19, 31, 0) 100%), url($url);
+}
