--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -68,9 +68,15 @@ nav {
       @include background(img);
       height: 100%;
       padding: 1.7rem 3rem;
+      p {
+          font-size: 2.4rem;
+      }
     }
   }
   .left-news {
+    p {
+        font-size: 1.3rem;
+    }
     .box-left {
       height: 16.5rem;
       padding: 1rem;
