--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,7 +47,7 @@ ul {
 }
 
 h1 {
-  font: 400 4.8rem 6rem "Lexend Deca";
+  font: 400 4.8rem "Lexend Deca";
   color: #FEFBEB;
 }
 
@@ -141,13 +141,17 @@ nav button {
 }
 
 #main-container {
-  background-color: turquoise;
   display: flex;
   flex-direction: column;
 }
+#main-container .text {
+  padding: 11.5rem 0;
+}
+#main-container .text h2 {
+  margin-top: 1.1rem;
+}
 
 .container-news {
-  background-color: violet;
   height: 35rem;
   display: flex;
   justify-content: space-between;
