--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -60,8 +60,12 @@ nav {
     }
   }
 }
-.container-news {
+#cont1 {
   height: 35rem;
+}
+
+.container-news {
+ 
   display: flex;
   justify-content: space-between;
 
@@ -109,6 +113,7 @@ nav {
     justify-content: space-between;
   }
 }
+
 
 .news-scroll {
 
