--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -177,6 +177,12 @@ nav {
     }
   
 .box-left-scroll {
-  height: 25rem;
-  padding: 1rem;
-}
+ 
+    height: 25rem;
+    padding: 1rem;
+
+    .btn-new2 {
+      @include buttons(nw2);
+    }
+  }
+
