--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -188,3 +188,8 @@ nav {
     }
   }
 
+#h1-scroll-left {
+  font: 400 2.4rem 'Lexend Deca';
+  border-bottom: .3rem solid $color-primary;
+ padding-bottom: 1.3rem;
+}
