--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -294,7 +294,6 @@ nav button {
 .recent-news {
   display: flex;
   flex-direction: column;
-  background-color: crimson;
 }
 .recent-news-box {
   display: flex;
@@ -303,11 +302,16 @@ nav button {
 }
 .recent-news-box-info {
   width: 28%;
-  background-color: cyan;
   margin-bottom: 4.1rem;
 }
 .recent-news-box-info p {
   font: 400 1.3rem "Lexend Deca";
+}
+.recent-news-box-info #nw2 {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(360deg, #13131F 0%, rgba(19, 19, 31, 0) 100%), url("../img/nw2.svg");
 }
 
 /*# sourceMappingURL=styles.css.map */
