--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,53 +1,8 @@
 @import "reset";
 @import "variables";
 @import "mixins";
+@import "header";
 
-#logo {
-  font: 400 2.4rem "Lexend Deca";
-  color: $color-primary;
-}
-nav {
-  height: 5.2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  .nav-list {
-    display: flex;
-    align-items: center;
-
-    a {
-      position: relative;
-      margin: 0 3rem;
-
-      &:hover {
-        color: #45588080;
-        &::after {
-          color: #45588080;
-          width: 100%;
-        }
-      }
-      &::after {
-        content: "";
-        position: absolute;
-        background-color: $color-primary;
-        height: 0.1rem;
-        width: 0;
-        left: 0;
-        bottom: -0.8rem;
-        transition: 0.3s ease-in;
-      }
-    }
-  }
- 
-  button {
-    background-color: transparent;
-    border: 0.1rem solid $color-primary;
-    border-radius: 10rem;
-    font: 400 1.4rem "Lexend Deca";
-    color: $white;
-  }
-}
 
 #main-container {
   display: flex;
